@@ -64,6 +64,7 @@
 * Ogone: Fix signature calulcation for blank fields [Heavyblade] #4963
 * VisaNet Peru: Add purchaseNumber to response object [yunnydang] #4961
 * SafeCharge: Support tokens [almalee24] #4948
+* Redsys: Update to $0 verify [almalee24] #4944
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
